--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "homepage": "https://jayolee.github.io/mlint",
   "dependencies": {
+    "chart.js": "^1.1.1",
     "react": "^16.8.6",
+    "react-chartjs": "^1.2.0",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
   },
